--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
 			<a href="#" class="logo"><img src="images/logo.png" alt="Kinguins Haxball Team"></a>
 			<div class="short-info">
 				<div class="item">
-					<span class="title">Основал:</span>
-					<span class="info"><img src="images/flags/ru.png"> <a href="#">Доберман</a></span>
-				</div>
-				<div class="item">
 					<span class="title">Капитан:</span>
 					<span class="info"><img src="images/flags/ua.png"> <a href="#">SlaveL</a></span>
 				</div>
@@ -63,7 +59,7 @@
 								</div>
 								<div class="player" id="player2">
 									<img src="images/shirt.png">
-									<span class="name">Доберман</span>
+									<span class="name">Свободно</span>
 								</div>
 							</div>
 							<div id="mid">
