--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
 						<article class="full-news">
 							<i class="fa fa-calendar"></i>
 							<div class="news-info">
+								<span class="news-title">Чистка состава</span>
+								<span class="news-description">Прощай, Добер!</span>
+							</div>
+							<div class="news-date">
+								05.09.2015
+							</div>
+						</article>
+						<article class="full-news">
+							<i class="fa fa-calendar"></i>
+							<div class="news-info">
 								<span class="news-title">Открытие офиса команды</span>
 								<span class="news-description">Ура, товарищи!</span>
 							</div>
