--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
 						<article class="full-trophy">
 							<i class="fa fa-skype"></i>
 							<div class="trophy-info">
+								<span class="trophy-title">Doberman (Владелец)</span>
+								<span class="trophy-description">Skype: janozf</span>
+							</div>
+						</article>
+						<article class="full-trophy">
+							<i class="fa fa-skype"></i>
+							<div class="trophy-info">
 								<span class="trophy-title">SlaveL (Капитан)</span>
 								<span class="trophy-description">Skype: l_i_on</span>
 							</div>
