--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 						<article class="full-news">
 							<i class="fa fa-calendar"></i>
 							<div class="news-info">
-								<span class="news-title">Чистка состава</span>
-								<span class="news-description">Прощай, Добер!</span>
+								<span class="news-title">Первый трофей</span>
+								<span class="news-description">Бронза Platinum Cup #71!
+								Сетка: www.challonge.com/ru/platinum71 </span>
 							</div>
 							<div class="news-date">
-								05.09.2015
+								10.08.2015
 							</div>
 						</article>
 						<article class="full-news">
@@ -65,11 +66,11 @@
 							<div id="gk">
 								<div class="player" id="player1">
 									<img src="images/shirt.png">
-									<span class="name">Vidal23</span>
+									<span class="name">D.Zola</span>
 								</div>
 								<div class="player" id="player2">
 									<img src="images/shirt.png">
-									<span class="name">Свободно</span>
+									<span class="name">solovey_fcz</span>
 								</div>
 							</div>
 							<div id="mid">
@@ -83,17 +84,17 @@
 								</div>
 								<div class="player" id="player5">
 									<img src="images/shirt.png">
-									<span class="name">npougoxa</span>
+									<span class="name">Ron</span>
 								</div>
 								<div class="player" id="player6">
 									<img src="images/shirt.png">
-									<span class="name">Сала</span>
+									<span class="name">SlaveL</span>
 								</div>
 							</div>
 							<div id="attack">
 								<div class="player" id="player7">
 									<img src="images/shirt.png">
-									<span class="name">SlaveL</span>
+									<span class="name">sala</span>
 								</div>
 								<div class="player" id="player8">
 									<img src="images/shirt.png">
@@ -101,11 +102,11 @@
 								</div>
 								<div class="player" id="player9">
 									<img src="images/shirt.png">
-									<span class="name">Covek</span>
+									<span class="name">Čovek</span>
 								</div>
 								<div class="player" id="player10">
 									<img src="images/shirt.png">
-									<span class="name">Zloy</span>
+									<span class="name">Ірина Білик</span>
 								</div>
 							</div>
 						</div>
@@ -117,8 +118,8 @@
 						<article class="full-trophy">
 							<i class="fa fa-star"></i>
 							<div class="trophy-info">
-								<span class="trophy-title">Какой-то кубок</span>
-								<span class="trophy-description">Описание</span>
+								<span class="trophy-title">Platinum Cup #71</span>
+								<span class="trophy-description">Бронза (http://challonge.com/ru/platinum71)</span>
 							</div>
 							<div class="trophy-date">
 								27.07.2015
@@ -132,15 +133,15 @@
 						<article class="full-trophy">
 							<i class="fa fa-skype"></i>
 							<div class="trophy-info">
-								<span class="trophy-title">Doberman (Владелец)</span>
-								<span class="trophy-description">Skype: janozf</span>
+								<span class="trophy-title">SlaveL (Владелец)</span>
+								<span class="trophy-description">Skype: l_i_on</span>
 							</div>
 						</article>
 						<article class="full-trophy">
 							<i class="fa fa-skype"></i>
 							<div class="trophy-info">
-								<span class="trophy-title">SlaveL (Капитан)</span>
-								<span class="trophy-description">Skype: l_i_on</span>
+								<span class="trophy-title">Čovek (Капитан)</span>
+								<span class="trophy-description">Skype: antonamaru</span>
 							</div>
 						</article>
 					</div>
