--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 			<a href="#" class="logo"><img src="images/logo.png" alt="Kinguins Haxball Team"></a>
 			<div class="short-info">
 				<div class="item">
+				<span class="title">Владелец:</span>
+					<span class="info"><img src="images/flags/ru.png"> <a href="#">SlaveL</a></span>
+				</div>
+				<div class="item">
 					<span class="title">Капитан:</span>
-					<span class="info"><img src="images/flags/ua.png"> <a href="#">SlaveL</a></span>
+					<span class="info"><img src="images/flags/ua.png"> <a href="#">Čovek</a></span>
 				</div>
 			</div>
 		</header>
