--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="short-info">
 				<div class="item">
 				<span class="title">Владелец:</span>
-					<span class="info"><img src="images/flags/ru.png"> <a href="#">SlaveL</a></span>
+					<span class="info"><img src="images/flags/ua.png"> <a href="#">SlaveL</a></span>
 				</div>
 				<div class="item">
 					<span class="title">Капитан:</span>
