--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 						<article class="full-trophy">
 							<i class="fa fa-star"></i>
 							<div class="trophy-info">
-								<span class="trophy-title">Platinum Cup #71</span>
-								<span class="trophy-description">Бронза (http://challonge.com/ru/platinum71)</span>
+								<span class="trophy-title">Бронза Platinum Cup #71</span>
+								<span class="trophy-description">www.challonge.com/ru/platinum71</span>
 							</div>
 							<div class="trophy-date">
 								27.07.2015
