--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<img src="images/shirt.png">
 									<span class="name">solovey_fcz</span>
 								</div>
-							</div>
+							</div></div>
 							<div id="mid">
 							         	<div class="player" id="player3">
 									<img src="images/shirt.png">
