--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
 									<img src="images/shirt.png">
 									<span class="name">solovey_fcz</span>
 								</div>
-							</div></div>
-							<div id="mid">
-							         	<div class="player" id="player3">
+								<div class="player" id="player3">
 									<img src="images/shirt.png">
 									<span class="name">Ron</span>
+							</div>
+							<div id="mid">
+							         	
 								</div>
 								<div class="player" id="player4">
 									<img src="images/shirt.png">
