--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								</div>
 								<div class="player" id="player8">
 									<img src="images/shirt.png">
-									<span class="name">Ірина Білик</span>
+									<span class="name">YA</span>
 								</div>
 								<div class="player" id="player9">
 									<img src="images/shirt.png">
