--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								</div>
 								<div class="player" id="player6">
 									<img src="images/shirt.png">
-									<span class="name">SlaveL</span>
+									<span class="name">SlaveL 52 ©</span>
 								</div>
 							</div>
 							<div id="attack">
