--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
 				<div id="block_home" class="item-block active">
 					<div class="news">
 						<span class="title"><i class="fa fa-calendar-o"></i> Последние новости</span>
-						<img src="http://s009.radikal.ru/i309/1509/3a/618e99ca3bc6.jpg">
+						<article class="full-news">
+					        <img src="http://s009.radikal.ru/i309/1509/3a/618e99ca3bc6.jpg">
+						[prostopleer]http://pleer.com/tracks/134541300yz6[/prostopleer]
+                                                [prostopleer]http://pleer.com/tracks/13454131PNWf[/prostopleer]
+                                                [prostopleer]http://pleer.com/tracks/13454133j7tq[/prostopleer]
+                                                </article>
 						<article class="full-news">
 							<i class="fa fa-calendar"></i>
 							<div class="news-info">
