--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 						<span class="title"><i class="fa fa-calendar-o"></i> Последние новости</span>
 						<article class="full-news">
 					        <img src="http://s009.radikal.ru/i309/1509/3a/618e99ca3bc6.jpg">
-						[prostopleer]http://pleer.com/tracks/134541300yz6[/prostopleer]
-                                                [prostopleer]http://pleer.com/tracks/13454131PNWf[/prostopleer]
-                                                [prostopleer]http://pleer.com/tracks/13454133j7tq[/prostopleer]
+						<object width="578" height="111"><param name="movie" value="http://embed.pleer.com/small/track?id=B80d9uBcn05htBih8&t=green"></param><embed src="http://embed.pleer.com/small/track?id=B80d9uBcn05htBih8&t=green" type="application/x-shockwave-flash" width="578" height="111"></embed></object><br> <small><a href="http://pleer.com/tracks/134541300yz6" target="_blank">Cкачать SlaveL Гимн Кингвинс бесплатно</a> на pleer.com</small>
+                                                <object width="578" height="111"><param name="movie" value="http://embed.pleer.com/small/track?id=B80d9vBcn05htBzmd&t=green"></param><embed src="http://embed.pleer.com/small/track?id=B80d9vBcn05htBzmd&t=green" type="application/x-shockwave-flash" width="578" height="111"></embed></object><br> <small><a href="http://pleer.com/tracks/13454131PNWf" target="_blank">Cкачать SlaveL Хаксбол ру бесплатно</a> на pleer.com</small>
+                                                <object width="578" height="111"><param name="movie" value="http://embed.pleer.com/small/track?id=B80d9xBcn05htBh7r&t=green"></param><embed src="http://embed.pleer.com/small/track?id=B80d9xBcn05htBh7r&t=green" type="application/x-shockwave-flash" width="578" height="111"></embed></object><br> <small><a href="http://pleer.com/tracks/13454133j7tq" target="_blank">Cкачать SlaveL NAPS - DNO! 2012 бесплатно</a> на pleer.com</small>
                                                 </article>
 						<article class="full-news">
 							<i class="fa fa-calendar"></i>
