--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								</div>
 								<div class="player" id="player5">
 									<img src="images/shirt.png">
-									<span class="name">David10</span>
+									<span class="name">Везиста</span>
 								</div>
 								<div class="player" id="player6">
 									<img src="images/shirt.png">
@@ -113,7 +113,7 @@
 								</div>
 								<div class="player" id="player10">
 									<img src="images/shirt.png">
-									<span class="name">sala</span>
+									<span class="name">Peppa</span>
 								</div>
 							</div>
 						</div>
