--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
 									<img src="images/shirt.png">
 									<span class="name">Peppa</span>
 								</div>
+								<div class="player" id="player11">
+									<img src="images/shirt.png">
+									<span class="name">Bober8</span>
+								</div>
 							</div>
 						</div>
 					</div>
