--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
 								</div>
 								<div class="player" id="player4">
 									<img src="images/shirt.png">
-									<span class="name">Ron</span>
+									<span class="name">Bober8</span>
 								</div>
 								<div class="player" id="player5">
 									<img src="images/shirt.png">
-									<span class="name">Везиста</span>
+									<span class="name">Загреб</span>
 								</div>
 								<div class="player" id="player6">
 									<img src="images/shirt.png">
-									<span class="name">SlaveL 52 ©</span>
+									<span class="name">SlaveL</span>
 								</div>
 							</div>
 							<div id="attack">
@@ -117,7 +117,7 @@
 								</div>
 									<div class="player" id="player11">
 									<img src="images/shirt.png">
-									<span class="name">Bober8</span>
+									<span class="name"></span>
 								</div>
 							</div>
 						</div>
