--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 								<div class="player" id="player10">
 									<img src="images/shirt.png">
 									<span class="name">Peppa</span>
+									</div>
 							</div>
 						</div>
 					</div>
@@ -129,6 +130,16 @@
 							</div>
 							<div class="trophy-date">
 								27.07.2015
+							</div>
+						</article>
+						<article class="full-trophy">
+							<i class="fa fa-star"></i>
+							<div class="trophy-info">
+								<span class="trophy-title">Бронза Кубок Субботы 202</span>
+								<span class="trophy-description">http://challonge.com/ru/subbota202</span>
+							</div>
+							<div class="trophy-date">
+								17.10.2015
 							</div>
 						</article>
 					</div>
