--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 								</div>
 								<div class="player" id="player4">
 									<img src="images/shirt.png">
-									<span class="name">Bober8</span>
+									<span class="name">Загреб</span>
 								</div>
 								<div class="player" id="player5">
 									<img src="images/shirt.png">
-									<span class="name">Загреб</span>
+									<span class="name">Bober8</span>
 								</div>
 								<div class="player" id="player6">
 									<img src="images/shirt.png">
@@ -114,11 +114,7 @@
 								<div class="player" id="player10">
 									<img src="images/shirt.png">
 									<span class="name">Peppa</span>
-								</div>
-									<div class="player" id="player11">
-									<img src="images/shirt.png">
-									<span class="name"></span>
-								</div>
+									</div>
 							</div>
 						</div>
 					</div>
@@ -134,6 +130,16 @@
 							</div>
 							<div class="trophy-date">
 								27.07.2015
+							</div>
+						</article>
+						<article class="full-trophy">
+							<i class="fa fa-star"></i>
+							<div class="trophy-info">
+								<span class="trophy-title">Бронза Кубок Субботы 202</span>
+								<span class="trophy-description">http://challonge.com/ru/subbota202</span>
+							</div>
+							<div class="trophy-date">
+								17.10.2015
 							</div>
 						</article>
 					</div>
