--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<article class="full-trophy">
 							<i class="fa fa-star"></i>
 							<div class="trophy-info">
-								<span class="trophy-title">Бронза Кубок Субботы 202</span>
+								<span class="trophy-title">Бронза Кубка Субботы 202</span>
 								<span class="trophy-description">http://challonge.com/ru/subbota202</span>
 							</div>
 							<div class="trophy-date">
